Revision history for Perl module/program Games::Alak
                                        Time-stamp: "2000-07-08 22:30:41 MDT"

2000-07-08  Sean M. Burke  sburke@cpan.org

	* Release 0.14 -- first release version
