@@ -1,0 +1,11 @@
+# http://module-build.sourceforge.net/META-spec.html
+#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
+name:         Games-Alak
+version:      0.15
+version_from: lib/Games/Alak.pm
+installdirs:  site
+requires:
+    Term::ReadLine:                0
+
+distribution_type: module
+generated_by: ExtUtils::MakeMaker version 6.17
